create transaction amount

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,14 +20,17 @@
             android:id="@+id/headerContent"
             layout="@layout/content_header_profile" />
 
+        <!-- TODO se der tempo adicionar o search -->
+
         <include
             android:id="@+id/homeSearchContacts"
             layout="@layout/content_custom_searchbar"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            android:visibility="gone"/>
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/homeRecentText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -50,7 +53,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView1" />
+            app:layout_constraintTop_toBottomOf="@+id/homeRecentText" />
 
         <TextView
             android:id="@+id/textView2"
