--- a/app/src/main/res/layout/content_custom_searchbar.xml
+++ b/app/src/main/res/layout/content_custom_searchbar.xml
@@ -21,8 +21,9 @@
             android:paddingStart="16dp"
             android:hint="Buscar Contato"
             android:maxLines="1"
+            android:focusable="false"
             android:focusableInTouchMode="false"
-            android:imeOptions="actionSearch"
+            android:imeOptions="actionDone"
             android:background="@android:color/transparent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/searchBarFindView"
