--- a/app/src/main/res/navigation/core_nav.xml
+++ b/app/src/main/res/navigation/core_nav.xml
@@ -20,9 +20,9 @@
 
         <argument
             android:name="contact_to_transfer"
+            android:defaultValue="@null"
             app:argType="br.com.gabrielmarcos.estudinglivedata.feature.models.Contact"
-            android:defaultValue="Contact('', '', '','', '')"
-            app:nullable="false"/>
+            app:nullable="true"/>
 
     </fragment>
 
