--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">@android:color/holo_orange_light</color>
+    <color name="colorPrimaryDark">@android:color/holo_orange_dark</color>
+    <color name="colorAccent">@android:color/holo_orange_dark</color>
+
+    <color name="dark_red">#c41835</color>
+    <color name="light_red">#EF5753</color>
+    <color name="lightest_red">#FCEBEA</color>
+
+    <color name="white">#FFFFFF</color>
+
+    <color name="black">#3E3E3E</color>
+
+    <color name="heavy_grey">#717171</color>
+    <color name="medium_grey">#A6A6A5</color>
+    <color name="regular_grey">#DCDCDC</color>
+    <color name="light_grey">#F2F2f2</color>
+
+    <color name="bg_snow">#F7FAFB</color>
+    <color name="bg_grey">#F7F7F7</color>
+
+    <color name="dark_purple">#642F6C</color>
+    <color name="light_purple">#8C368C</color>
+
+    <color name="error">#FF7752</color>
+    <color name="attention">#E7A74E</color>
+    <color name="positive">#50A773</color>
+
 </resources>
